--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
+    "react-modal": "^3.16.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
